--- a/boxfuse-sample-java-war-hello/pom.xml
+++ b/boxfuse-sample-java-war-hello/pom.xml
@@ -41,7 +41,11 @@
                         <image>tomcat:8-jre8-alpine</image>
                     </from>
                     <to>
-                        <image>myimage</image>
+                        <image>84.201.176.42:8092/appimage:latest</image>
+                        <auth>
+                            <username>admin</username>
+                            <password>b23efb22-c4fb-4a83-b704-97040f4927b6</password>
+                        </auth>
                     </to>
                     <container>
                         <ports>
