--- a/boxfuse-sample-java-war-hello/pom.xml
+++ b/boxfuse-sample-java-war-hello/pom.xml
@@ -41,7 +41,7 @@
                         <image>84.201.176.42:8082/appimage:latest</image>
                         <auth>
                             <username>admin</username>
-                            <password>b23efb22-c4fb-4a83-b704-97040f4927b6</password>
+                            <password>...placeholder..</password>
                         </auth>
                     </to>
                     <container>
